--- a/index.html
+++ b/index.html
@@ -3,164 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher Signup</title>
-    <!-- Bootstrap 5 CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Imam Hafsin Model International School</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+        .hero {
+            background: url('school-background.jpg') no-repeat center center;
+            background-size: cover;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            color: white;
+        }
+        .navbar {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+        .footer {
+            background-color: #343a40;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8 col-sm-12">
-                <div class="card">
-                    <div class="card-header text-center">
-                        <h3>Teacher Signup</h3>
-                    </div>
-                    <div class="card-body">
-                        <form id="teacherSignupForm" action="/teacher-signup" method="POST" enctype="multipart/form-data">
-                            <!-- Name field -->
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="name" name="name" required>
-                            </div>
-                            <!-- Email field -->
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" name="email" required>
-                            </div>
-                            <!-- Password field -->
-                            <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" name="password" required>
-                            </div>
-                            <!-- Role selection: Teacher or Form Master -->
-                            <div class="mb-3">
-                                <label for="role" class="form-label">Role</label>
-                                <select class="form-select" id="role" name="role" required>
-                                    <option value="" disabled selected>Select Role</option>
-                                    <option value="teacher">Teacher</option>
-                                    <option value="form_master">Form Master</option>
-                                </select>
-                            </div>
-                            <!-- Subjects teaching using checkboxes -->
-                                               <!-- Subjects teaching using checkboxes -->
-                                               <div class="mb-3">
-                                                <label class="form-label">Subjects Teaching</label><br>
-                                                <div><small class="text-muted">Please select all the subjects you are currently teaching by checking the boxes below.</small></div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="maths" name="subjects[]" value="Mathematics">
-                                                    <label class="form-check-label" for="maths">Mathematics</label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="english" name="subjects[]" value="English">
-                                                    <label class="form-check-label" for="english">English</label>
-                                                </div>
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" id="physics" name="subjects[]" value="Physics">
-                                                    <label class="form-check-label" for="physics">Physics</label>
-                                                </div>
-                                                <!-- Add more subjects as needed -->
-                                            </div>
-                                            <!-- Classes teaching using checkboxes -->
-                                         <!-- Classes teaching -->
-                <div class="mb-3">
-                    <label for="classes" class="form-label">Classes Teaching</label>
-                    <div><small class="text-muted">Please select all the classes you are currently teaching by checking the boxes below.</small>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="pre-nursery" name="classes[]" value="Pre-Nursery">
-                        <label class="form-check-label" for="pre-nursery">Pre-Nursery</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="nursery-1" name="classes[]" value="Nursery 1">
-                        <label class="form-check-label" for="nursery-1">Nursery 1</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="nursery-2" name="classes[]" value="Nursery 2">
-                        <label class="form-check-label" for="nursery-2">Nursery 2</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-1" name="classes[]" value="Primary 1">
-                        <label class="form-check-label" for="primary-1">Primary 1</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-2" name="classes[]" value="Primary 2">
-                        <label class="form-check-label" for="primary-2">Primary 2</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-3" name="classes[]" value="Primary 3">
-                        <label class="form-check-label" for="primary-3">Primary 3</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-4" name="classes[]" value="Primary 4">
-                        <label class="form-check-label" for="primary-4">Primary 4</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-5" name="classes[]" value="Primary 5">
-                        <label class="form-check-label" for="primary-5">Primary 5</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="jss-1" name="classes[]" value="JSS 1">
-                        <label class="form-check-label" for="jss-1">JSS 1</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="jss-2" name="classes[]" value="JSS 2">
-                        <label class="form-check-label" for="jss-2">JSS 2</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="jss-3" name="classes[]" value="JSS 3">
-                        <label class="form-check-label" for="jss-3">JSS 3</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="ss-1" name="classes[]" value="SS 1">
-                        <label class="form-check-label" for="ss-1">SS 1</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="ss-2" name="classes[]" value="SS 2">
-                        <label class="form-check-label" for="ss-2">SS 2</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="ss-3" name="classes[]" value="SS 3">
-                        <label class="form-check-label" for="ss-3">SS 3</label>
-                    </div>
-                    
-                </div>
-                
-                           <!-- Highest Qualification Dropdown -->
-<div class="mb-3">
-    <label for="qualification" class="form-label">Highest Qualification</label>
-    <select class="form-select" id="qualification" name="qualification" required>
-        <option value="" disabled selected>Select Qualification</option>
-        <option value="Diploma">Diploma</option>
-        <option value="HND">HND</option>
-        <option value="BSc">BSc</option>
-        <option value="Master">Master</option>
-        <option value="NCE">NCE</option>
-        <option value="PhD">PhD</option>
-        <option value="Others">Others</option>
-    </select>
-    <!-- Additional Specification Field -->
-    <!-- Input field for other qualification -->
-    <label for="otherQualification">If Others, specify:</label>
-    <input type="text" id="otherQualification" placeholder="Specify other qualification" style="display: none;">
-    </div>
-</div>
 
-                            <!-- Profile Picture Upload -->
-                            <div class="mb-3">
-                                <label for="profilePicture" class="form-label">Profile Picture</label>
-                                <input type="file" class="form-control" id="profilePicture" name="profilePicture" accept="image/*" required>
-                            </div>
-                            <!-- Submit button -->
-                            <button type="submit" class="btn btn-primary w-100">Signup</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">Imam Hafsin School</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#programs">Programs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="hero">
+        <div class="container text-center">
+            <h1>Welcome to Imam Hafsin Model International School</h1>
+            <p>Your future begins here.</p>
+            <a href="#contact" class="btn btn-primary btn-lg">Get In Touch</a>
         </div>
     </div>
 
-    <!-- Bootstrap 5 JS CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="teachears-signup.js"></script>
+    <section id="about" class="py-5">
+        <div class="container text-center">
+            <h2>About Us</h2>
+            <p>Imam Hafsin Model International School is committed to providing quality education...</p>
+        </div>
+    </section>
+
+    <section id="programs" class="py-5 bg-light">
+        <div class="container text-center">
+            <h2>Our Programs</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <h4>Primary Education</h4>
+                    <p>Focused on foundational skills and knowledge.</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Secondary Education</h4>
+                    <p>Preparing students for higher education and life skills.</p>
+                </div>
+                <div class="col-md-4">
+                    <h4>Extracurricular Activities</h4>
+                    <p>Enhancing skills beyond the classroom.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="py-5">
+        <div class="container text-center">
+            <h2>Contact Us</h2>
+            <p>Email: info@ihms.edu | Phone: (123) 456-7890</p>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>© 2024 Imam Hafsin Model International School. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
