--- a/signup.html
+++ b/signup.html
@@ -44,28 +44,28 @@
         <option value="Form Master">Form Master</option>
     </select>
 </div>
-
-                            <div class="mb-3" id="class-selection" style="display: none;">
-                                <label for="class" class="form-label">Class (Form Master)</label>
-                                <select class="form-select" id="formClass" name="formClass">
-                                    <option value="" disabled selected>Select Class</option>
-                                    <option value="Pre_Nursery">Pre-Nursery</option>
-                                    <option value="Nursery_1">Nursery 1</option>
-                                    <option value="Nursery_2">Nursery 2</option>
-                                    <option value="Primary_1">Primary 1</option>
-                                    <option value="Primary_2">Primary 2</option>
-                                    <option value="Primary_3">Primary 3</option>
-                                    <option value="Primary_4">Primary 4</option>
-                                    <option value="Primary_5">Primary 5</option>
-                                    <option value="Primary_6">Primary 6</option>
-                                    <option value="JSS_1">JSS 1</option>
-                                    <option value="JSS_2">JSS 2</option>
-                                    <option value="JSS_3">JSS 3</option>
-                                    <option value="SSS_1">SSS 1</option>
-                                    <option value="SSS_2">SSS 2</option>
-                                    <option value="SSS_3">SSS 3</option>
-                                </select>
-                            </div>
+<div class="mb-3" id="class-selection" style="display: none;">
+    <label for="class" class="form-label">Class (Form Master)</label>
+    <select class="form-select" id="formClass" name="formClass">
+        <option value="" disabled selected>Select Class</option>
+        <option value="Pre-Nursery">Pre-Nursery</option>
+        <option value="Nursery 1">Nursery 1</option>
+        <option value="Nursery 2">Nursery 2</option>
+        <option value="Primary 1">Primary 1</option>
+        <option value="Primary 2">Primary 2</option>
+        <option value="Primary 3">Primary 3</option>
+        <option value="Primary 4">Primary 4</option>
+        <option value="Primary 5">Primary 5</option>
+        <option value="Primary 6">Primary 6</option>
+        <option value="JSS 1">JSS 1</option>
+        <option value="JSS 2">JSS 2</option>
+        <option value="JSS 3">JSS 3</option>
+        <option value="SSS 1">SSS 1</option>
+        <option value="SSS 2">SSS 2</option>
+        <option value="SSS 3">SSS 3</option>
+    </select>
+</div>
+                            
                             <!-- Subjects teaching using checkboxes -->
                                                <!-- Subjects teaching using checkboxes -->
                                                <div class="mb-3">
