--- a/signup.html
+++ b/signup.html
@@ -49,20 +49,20 @@
     <select class="form-select" id="formClass" name="formClass">
         <option value="" disabled selected>Select Class</option>
         <option value="Pre-Nursery">Pre-Nursery</option>
-        <option value="Nursery 1">Nursery 1</option>
-        <option value="Nursery 2">Nursery 2</option>
-        <option value="Primary 1">Primary 1</option>
-        <option value="Primary 2">Primary 2</option>
-        <option value="Primary 3">Primary 3</option>
-        <option value="Primary 4">Primary 4</option>
-        <option value="Primary 5">Primary 5</option>
-        <option value="Primary 6">Primary 6</option>
-        <option value="JSS 1">JSS 1</option>
-        <option value="JSS 2">JSS 2</option>
-        <option value="JSS 3">JSS 3</option>
-        <option value="SSS 1">SSS 1</option>
-        <option value="SSS 2">SSS 2</option>
-        <option value="SSS 3">SSS 3</option>
+        <option value="Nursery One">Nursery 1</option>
+        <option value="Nursery Two">Nursery 2</option>
+        <option value="Primary One">Primary 1</option>
+        <option value="Primary Two">Primary 2</option>
+        <option value="Primary Three">Primary 3</option>
+        <option value="Primary Four">Primary 4</option>
+        <option value="Primary Five">Primary 5</option>
+        <option value="Primary Six">Primary 6</option>
+        <option value="JSS One">JSS 1</option>
+        <option value="JSS Two">JSS 2</option>
+        <option value="JSS Three">JSS 3</option>
+        <option value="SSS One">SSS 1</option>
+        <option value="SSS Two">SSS 2</option>
+        <option value="SSS Three">SSS 3</option>
     </select>
 </div>
                             
@@ -96,55 +96,59 @@
                         <label class="form-check-label" for="pre-nursery">Pre-Nursery</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="nursery-1" name="classes[]" value="Nursery 1">
+                        <input class="form-check-input" type="checkbox" id="nursery-1" name="classes[]" value="Nursery One">
                         <label class="form-check-label" for="nursery-1">Nursery 1</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="nursery-2" name="classes[]" value="Nursery 2">
+                        <input class="form-check-input" type="checkbox" id="nursery-2" name="classes[]" value="Nursery Two">
                         <label class="form-check-label" for="nursery-2">Nursery 2</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-1" name="classes[]" value="Primary 1">
+                        <input class="form-check-input" type="checkbox" id="primary-1" name="classes[]" value="Primary One">
                         <label class="form-check-label" for="primary-1">Primary 1</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-2" name="classes[]" value="Primary 2">
+                        <input class="form-check-input" type="checkbox" id="primary-2" name="classes[]" value="Primary Two">
                         <label class="form-check-label" for="primary-2">Primary 2</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-3" name="classes[]" value="Primary 3">
+                        <input class="form-check-input" type="checkbox" id="primary-3" name="classes[]" value="Primary Three">
                         <label class="form-check-label" for="primary-3">Primary 3</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-4" name="classes[]" value="Primary 4">
+                        <input class="form-check-input" type="checkbox" id="primary-4" name="classes[]" value="Primary Four">
                         <label class="form-check-label" for="primary-4">Primary 4</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="primary-5" name="classes[]" value="Primary 5">
+                        <input class="form-check-input" type="checkbox" id="primary-5" name="classes[]" value="Primary Five">
                         <label class="form-check-label" for="primary-5">Primary 5</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="jss-1" name="classes[]" value="JSS 1">
+                        <input class="form-check-input" type="checkbox" id="primary-6" name="classes[]" value="Primary Six">
+                        <label class="form-check-label" for="primary-6">Primary 6</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="jss-1" name="classes[]" value="JSS One">
                         <label class="form-check-label" for="jss-1">JSS 1</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="jss-2" name="classes[]" value="JSS 2">
+                        <input class="form-check-input" type="checkbox" id="jss-2" name="classes[]" value="JSS Two">
                         <label class="form-check-label" for="jss-2">JSS 2</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="jss-3" name="classes[]" value="JSS 3">
+                        <input class="form-check-input" type="checkbox" id="jss-3" name="classes[]" value="JSS Three">
                         <label class="form-check-label" for="jss-3">JSS 3</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="ss-1" name="classes[]" value="SS 1">
+                        <input class="form-check-input" type="checkbox" id="ss-1" name="classes[]" value="SSS One">
                         <label class="form-check-label" for="ss-1">SS 1</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="ss-2" name="classes[]" value="SS 2">
+                        <input class="form-check-input" type="checkbox" id="ss-2" name="classes[]" value="SSS Two">
                         <label class="form-check-label" for="ss-2">SS 2</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="ss-3" name="classes[]" value="SS 3">
+                        <input class="form-check-input" type="checkbox" id="ss-3" name="classes[]" value="SSS Three">
                         <label class="form-check-label" for="ss-3">SS 3</label>
                     </div>
                     
